test/classes/initializers/phase1/useAfterInit/outOfOrder.good
outOfOrder.chpl:6: In initializer:
outOfOrder.chpl:8: error: Field "x" initialized out of order
